--- a/parts/bas.html
+++ b/parts/bas.html
@@ -1,4 +1,4 @@
 <div style="height:50px;"></div>
-<script>
+<!--<script>
 	$('img').on('dragstart', function(event) { event.preventDefault(); });
-</script>
+</script>-->
